log
Thu Apr 30 08:01:29 PM UTC 2026: 
 tests:  1|8
total_score: 0/60
5c0032b
Thu Apr 30 08:08:46 PM UTC 2026: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:106:25: error: ‘tree’ is a pointer; did you mean to use ‘->’?
  106 |     TreeNode *aux = tree.root;
      |                         ^
      |                         ->
e84bff6
